--- a/app/src/js/app/shared/views/topbar.html
+++ b/app/src/js/app/shared/views/topbar.html
@@ -87,12 +87,12 @@ handleSmallScreens()
           <span></span>
         </button>
         <a href="#">
-          <h4>Awesome<span>logo</span></h4>
+          <h4>Lex<span>Tracking</span></h4>
         </a>
       </div>
   
       <div class="navbar-menu" id="open-navbar1">
-        <ul class="navbar-nav">
+        <!-- <ul class="navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li class="navbar-dropdown">
             <a href="#" class="dropdown-toggler" data-dropdown="my-dropdown-id">
@@ -123,6 +123,23 @@ handleSmallScreens()
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Signin</a></li>
+        </ul> -->
+      </div>
+      <div class="navbar-menu">
+        <ul class="navbar-nav">
+          <li class="navbar-dropdown">
+            <a href="#" class="dropdown-toggler" data-dropdown="blog">
+              Blog <i class="fa fa-angle-down"></i>
+            </a>
+            <ul class="dropdown" id="blog">
+              <li><a href="#">Some category</a></li>
+              <li><a href="#">Some another category</a></li>
+              <li class="separator"></li>
+              <li><a href="#">Seprated link</a></li>
+              <li class="separator"></li>
+              <li><a href="#">One more seprated link.</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
